# susanoo-core

./: README.md  pnpm-lock.yaml
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/dashboard/: fleet-map.tsx  fleet-sidebar.tsx  fleet-top-bar.tsx  fpv-viewer.tsx  scenario-controller.tsx  system-alerts.tsx  unit-panel.tsx
apps/web/src/components/landing/: features-section.tsx  footer.tsx  glass-nav.tsx  hero-robot.tsx  hero-section.tsx  tech-stack-section.tsx  vision-section.tsx
apps/web/src/components/simulation/: simulation-viewer.tsx
apps/web/src/hooks/: use-mqtt.ts
apps/web/src/pages/: dashboard-page.tsx  landing-page.tsx
apps/web/src/providers/: mqtt-provider.tsx
apps/web/src/store/: use-telemetry.ts
apps/web/src/types/: aetheris.ts
crates/aetheris-brain/: Cargo.toml
crates/aetheris-engine/: Cargo.toml
crates/aetheris-engine/src/: main.rs
crates/aetheris-shared/: Cargo.toml
crates/aetheris-shared/src/: lib.rs
