[package]
name = "aetheris-engine"
version = "0.1.0"
edition = "2024"
description = "AETHERIS Robotics Engine - Simulation, MQTT communication, and fleet coordination"
authors = ["AETHERIS Team"]

[dependencies]
# Internal crates
aetheris-shared = { path = "../aetheris-shared" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# MQTT client
rumqttc = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
rand = "0.9"
